<resources>
    <string name="app_name">WhatsClone</string>
    <string name="digite_seu_email">Digite seu e-mail</string>
    <string name="cod_regia">+55</string>
    <string name="cod_area">21</string>
    <string name="logar">Logar</string>
    <string name="validar">Validar</string>
    <string name="digite_senha">Digite sua senha</string>
    <string name="validacao">Validação</string>
    <string name="registro_validacao">Você recebeu um SMS para a validação do seu número, digite o código de validação abaixo</string>
    <string name="erro_envio">Problema ao enviar o SMS, por favor tente novamente !</string>
    <string name="title_activity_cadastro_usuario">CadastroUsuarioActivity</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="ir_para_cadastro">Não tem uma conta ? Cadastre-se</string>
    <string name="sucesso_cadastro">Sucesso ao cadastrar ao cadastrar o usuário</string>
    <string name="falha_cadastro">Erro ao cadastrar ao cadastrar o usuário</string>
    <string name="whats_app">WhatsApp</string>
    <string name="sair">Sair</string>
    <string name="pesquisa">Pesquisa</string>
    <string name="adcionar">Adicionar</string>
    <string name="configuracao">Configuração</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
